# revolvr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODOS.txt  VrApp.gradle  authors.md  build.gradle  cflags.mk  error.txt  license.txt  readme.md  settings.gradle  validation_errors.txt
FTS/: Android.mk  AndroidManifest.xml  Application.mk  CMakeLists.txt  android.debug.keystore  build.gradle  settings.gradle
FTS/Projects/Android/: AndroidManifest.xml  android.debug.keystore  build.gradle  settings.gradle
FTS/Projects/Android/jni/: Android.mk
FTS/assets/: TestRoom.tscn  example.revolvr  example.rvr  example_ECS.rvr  test_scene.rvr
FTS/assets/test_scenes/: cloning.rvr  generic.rvr  hand_collision.rvr  spinning_pointer.rvr  timer.rvr
FTS/include/: check.h  common.h  pch.h  platformdata.h
FTS/res/values/: strings.xml
FTS/src/: graphicsplugin_factory.cpp  graphicsplugin_vulkan.cpp  logger.cpp  main.cpp  openxr_program.cpp  platformplugin_factory.cpp
FTS/src/main/cpp/: graphicsplugin_factory.cpp  graphicsplugin_vulkan.cpp  logger.cpp  main.cpp  matrix_asm_a64.s  my_rvr_mesh.cpp  my_rvr_object.cpp  my_rvr_spatial.cpp  openxr_program.cpp  pch.cpp  platformplugin_android.cpp  platformplugin_factory.cpp  revolvr_app.cpp  rvr_android_platform.cpp  rvr_app.cpp  rvr_auto_scene_tree.cpp  rvr_game_loop_timer.cpp  rvr_math.cpp  rvr_mesh.cpp  rvr_object.cpp  rvr_scene_tree.cpp  rvr_spatial.cpp  rvr_vulkan_renderer.cpp  spinning_pointer.cpp
FTS/src/main/cpp/engine/: app.cpp  game_loop_timer.cpp  global_context.cpp  input_state.cpp  logger.cpp  main.cpp  native_activity.cpp  ritual_type.cpp  rvr_app.cpp  rvr_app_context.cpp  rvr_auto_scene_tree.cpp  rvr_game_loop_timer.cpp  rvr_hand.cpp  rvr_mesh.cpp  rvr_origin.cpp  rvr_scene_tree.cpp  rvr_spatial.cpp  rvr_xr_context.cpp  scene.cpp  xr_context.cpp
FTS/src/main/cpp/engine/action/: action.cpp  action_manager.cpp  io.cpp
FTS/src/main/cpp/engine/action/input/: bool_action.cpp  float_action.cpp  grab.cpp  oculus_input_actions.cpp  pose_action.cpp  quit.cpp  vec2_action.cpp
FTS/src/main/cpp/engine/action/output/: haptic_action.cpp  oculus_output_actions.cpp  vibrate.cpp
FTS/src/main/cpp/engine/audio/: audio_engine.cpp  audio_spatializer.cpp  mixer.cpp  oscillator.cpp  wav_audio_source.cpp
FTS/src/main/cpp/engine/ecs/: ecs.cpp  ecs_info.cpp
FTS/src/main/cpp/engine/ecs/component/: component.cpp  component_factory.cpp  component_factory_util.cpp  component_init.cpp  component_pool.cpp  component_pool_manager.cpp  component_type.cpp  spatial.cpp
FTS/src/main/cpp/engine/ecs/component/types/: audio.cpp  collider.cpp  mesh.cpp  ritual.cpp  spatial.cpp  timer.cpp  tracked_space.cpp
FTS/src/main/cpp/engine/ecs/entity/: entity.cpp  entity_factory.cpp  entity_node.cpp  entity_pool.cpp
FTS/src/main/cpp/engine/ecs/system/: audio_system.cpp  collision_system.cpp  input_system.cpp  io_system.cpp  render_system.cpp  ritual_system.cpp  spatial_system.cpp
FTS/src/main/cpp/engine/ecs/system/notification/: collsion_event.cpp  event.cpp  subject.cpp
FTS/src/main/cpp/engine/include/: app.h  check.h  common.h  game_loop_timer.h  global_context.h  input_state.h  ritual_map.h  ritual_type.h  rvr_app.h  rvr_app_context.h  rvr_auto_scene_tree.h  rvr_math.h  rvr_scene_tree.h  rvr_vulkan_renderer.h  rvr_xr_context.h  scene.h  vulkan_results.h  xr_app_helpers.h  xr_context.h
FTS/src/main/cpp/engine/include/action/: action.h  action_manager.h  io.h
FTS/src/main/cpp/engine/include/audio/: audio_engine.h  audio_spatializer.h  mixer.h  oscillator.h  wav_audio_source.h
FTS/src/main/cpp/engine/include/ecs/: ecs.h  ecs_info.h
FTS/src/main/cpp/engine/include/math/: linear_math.h  math.h  pose.h  pose_util.h  qauternion_util.h  rvr_math.h  rvr_matrix_util.h  rvr_pose.h  rvr_qauternion_util.h  rvr_transform.h  transform.h  vector_util.h  xr_linear.h
FTS/src/main/cpp/engine/include/objects/: rvr_mesh.h  rvr_spatial.h  rvr_type.h
FTS/src/main/cpp/engine/include/platform/: android_context.h  rvr_android_context.h
FTS/src/main/cpp/engine/include/renderer/: rvr_vulkan_renderer.h  rvr_vulkan_utilities.h  vulkan_renderer.h  vulkan_results.h
FTS/src/main/cpp/engine/include/rvr_parser/: parser.h  rvr_grammar.txt  scanner.h  token.h
FTS/src/main/cpp/engine/math/: math_util.cpp  pose.cpp  rvr_math.cpp  rvr_math_util.cpp  rvr_pose.cpp  rvr_transform.cpp  transform.cpp
FTS/src/main/cpp/engine/objects/: rvr_hand.cpp  rvr_mesh.cpp  rvr_object.cpp  rvr_origin.cpp  rvr_spatial.cpp
FTS/src/main/cpp/engine/platform/: android_context.cpp  rvr_android_context.cpp  rvr_android_platform.cpp
FTS/src/main/cpp/engine/renderer/: rvr_vulkan_renderer.cpp  vulkan_renderer.cpp
FTS/src/main/cpp/engine/rendering/: rvr_vulkan_renderer.cpp
FTS/src/main/cpp/engine/rvr_parser/: parser.cpp  scanner.cpp  token.cpp
FTS/src/main/cpp/fts-game/: conway_box_maker.cpp  disappear.cpp  hand_behavior.cpp  left_hand_behavior.cpp  main.cpp  moving_sound_box.cpp  ritual_behaviors.cpp  ritual_type.cpp  spawn_box.cpp  spinning_pointer.cpp  timer_box_maker.cpp
FTS/src/main/cpp/fts-game/include/: all_ritual_types.h  conway_box_maker.h  disappear.h  hand_behavior.h  helper_macros.h  left_hand_behavior.h  moving_sound_box.h  ritual_behaviors.h  ritual_hdrs.h  ritual_list.h  ritual_type.h  rituals.h  spawn_box.h  spinning_pointer.h
FTS/src/main/cpp/include/: check.h  graphicsplugin.h  my_rvr_mesh.h  my_rvr_object.h  my_rvr_spatial.h  options.h  revolvr_app.h  rvr_android_platform.h  rvr_app.h  rvr_auto_scene_tree.h  rvr_game_loop_timer.h  rvr_hand.h  rvr_math.h  rvr_mesh.h  rvr_object.h  rvr_origin.h  rvr_reference_space.h  rvr_scene_tree.h  rvr_spatial.h  rvr_type.h  rvr_vulkan_renderer.h  rvr_vulkan_utilities.h  spinning_pointer.h  xr_app_helpers.h  xr_linear.h
FTS/src/main/cpp/rvr_parser/: CMakeLists.txt  example.rvr  main.cpp  main.cpp.blarg  parser.cpp  parser.h  rvr_grammar.txt  scanner.cpp  scanner.h  token.cpp  token.h
FTS/src/main/java/: MainActivity.java
FTS/src/main/java/com/imminenteminence/fts/: MainActivity.java
app/: build.gradle
core/: app.cpp  (+12 more)
(+621 files in other folders)
